Change the branch name for the django-glitter project

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ deps =
     coverage>=4.0,<4.1
     ipdb>=0.10.2,<0.10.3
     django-taggit>=0.21.3
-    git+git://github.com/blancltd/django-glitter.git@feature/reminders#egg=django-glitter
+    git+git://github.com/blancltd/django-glitter.git@master#egg=django-glitter
 commands =
     {envbindir}/coverage run --parallel-mode --branch --include="glitter_documents/*" {envbindir}/django-admin.py test {posargs:glitter_documents}
 setenv =
