--- a/tox.ini
+++ b/tox.ini
@@ -1,21 +1,23 @@
 [tox]
 envlist = {py27,py33,py34,py35}-django18, {py27,py34,py35}-django19, docs, coverage, flake8
 
+
 [testenv]
 deps =
     django18: Django>=1.8.6,<1.9
     django19: Django>=1.9,<1.10
     Pillow>=3.0,<3.1
     coverage>=4.0,<4.1
-    ipdb>=0.10.2,<0.10.3
     django-taggit>=0.21.3
     git+git://github.com/blancltd/django-glitter.git@master#egg=django-glitter
 commands =
-    {envbindir}/coverage run --parallel-mode --branch --include="glitter_documents/*" {envbindir}/django-admin.py test {posargs:glitter_documents}
+    {envbindir}/coverage run {envbindir}/django-admin.py test {posargs:tests}
 setenv =
-    DJANGO_SETTINGS_MODULE = glitter_documents.tests.settings
-    PYTHONPATH = {toxinidir}
-    PYTHONWARNINGS = all
+    COVERAGE_FILE = {toxinidir}/.coverage
+    DJANGO_SETTINGS_MODULE = tests.settings
+    STATIC_ROOT = {envtmpdir}/static
+usedevelop = true
+
 
 [testenv:coverage]
 basepython = python3.5
@@ -23,17 +25,23 @@ commands =
     {envbindir}/coverage combine
     {envbindir}/coverage report --show-missing
     {envbindir}/coverage html
+    {envbindir}/coverage xml
 deps =
     coverage>=4.0,<4.1
+skip_install = true
+
 
 [testenv:flake8]
 basepython = python3.5
 deps = flake8>=2.4,<2.5
 commands = flake8 glitter_documents
+skip_install = true
+
 
 [flake8]
 max-line-length = 99
 exclude = glitter_documents/migrations,glitter_documents/*/migrations
+
 
 [doc8]
 max-line-length = 99
