Add image field for the document

--- a/tox.ini
+++ b/tox.ini
@@ -6,10 +6,7 @@ envlist = {py27,py33,py34,py35}-django18, {py27,py34,py35}-django19, docs, cover
 deps =
     django18: Django>=1.8.6,<1.9
     django19: Django>=1.9,<1.10
-    Pillow>=3.0,<3.1
-    coverage>=4.0,<4.1
-    django-taggit>=0.21.3
-    git+git://github.com/blancltd/django-glitter.git@master#egg=django-glitter
+    -rrequirements/local.txt
 commands =
     {envbindir}/coverage run {envbindir}/django-admin.py test {posargs:tests}
 setenv =
@@ -33,7 +30,6 @@ skip_install = true
 
 [testenv:flake8]
 basepython = python3.5
-deps = flake8>=2.4,<2.5
 commands = flake8 glitter_documents
 skip_install = true
 
