--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ envlist = {py27,py33,py34,py35}-django18, {py27,py34,py35}-django19, docs, cover
 deps =
     django18: Django>=1.8.6,<1.9
     django19: Django>=1.9,<1.10
-    -rrequirements/local.txt
+    -rrequirements/tests.txt
 commands =
     {envbindir}/coverage run {envbindir}/django-admin.py test {posargs:tests}
 setenv =
